--- a/index.html
+++ b/index.html
@@ -1,14 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang="pl">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Akademia</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    Akademia
-</body>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/menu.css">
+		<link rel="stylesheet" href="/css/all.min.css">
+		<link rel="stylesheet" href="/css/fontawesome.min.css">
+		<link rel="stylesheet" href="/css/owl.carousel.min.css">
+		<link rel="stylesheet" href="/css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="/css/magnific-popup.css">
+	</head>
+	<body>
+		<header id="header">
+			<nav class="links" style="--items: 5;">
+				<a href="#">Link 1</a>
+				<a href="#">Link 2</a>
+				<a href="#">Link 3</a>
+				<a href="#">Link 4</a>
+				<a href="#">Link 5</a>
+				<span class="line"></span>
+			</nav>
+		</header>
+		<section class="header">
+			<video autoplay muted loop id="myVideo" class="video-header img-responsive">
+				<source src="/video/video.mp4" type="video/mp4">
+			</video>
+			<div class="overlay"></div>
+			<div class="header__title">
+				<img src="/images/logo.png" alt="">
+				Dołącz do nas
+			</div>
+		</section>
+		<section class="content">
+			<div class="container">
+				<h2 class="content__title">Poznaj <span class="text-purple">przewagi</span> akademii</h2>
+				<div class="items">
+					<div class="item">
+						<div class="item__title">
+							<i class="fas fa-futbol"></i> <h4>Lorem ipsum</h4>
+						</div>
+						<div class="item__content">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ad laborum consequatur suscipit pariatur quasi earum, delectus dolor quod qui magni laudantium, debitis quos. Quis velit cupiditate tempore repellendus, numquam minus atque animi?
+						</div>
+					</div>
+					<div class="item">
+						<div class="item__title">
+							<i class="fas fa-trophy"></i> <h4>Lorem ipsum</h4>
+						</div>
+						<div class="item__content">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ad laborum consequatur suscipit pariatur quasi earum, delectus dolor quod qui magni laudantium, debitis quos. Quis velit cupiditate tempore repellendus, numquam minus atque animi?
+						</div>
+					</div>
+					<div class="item">
+						<div class="item__title">
+							<i class="fas fa-exchange-alt"></i> <h4>Lorem ipsum</h4>
+						</div>
+						<div class="item__content">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ad laborum consequatur suscipit pariatur quasi earum, delectus dolor quod qui magni laudantium, debitis quos. Quis velit cupiditate tempore repellendus, numquam minus atque animi?
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="content gallery">
+			<div class="container">
+				<h2 class="content__title">Galeria <span class="text-purple">zdjęć</span></h2>
+				<div class="owl-carousel gallery">
+					<div class="gallery__item"><a href="/images/foto1.jpg"><img src="/images/foto1.jpg"/></a></div>
+					<div class="gallery__item"><a href="/images/foto2.jpg"><img src="/images/foto2.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto3.jpg"><img src="/images/foto3.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto4.jpg"><img src="/images/foto4.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto5.png"><img src="/images/foto5.png"></a></div>
+					<div class="gallery__item"><a href="/images/foto6.jpg"><img src="/images/foto6.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto7.png"><img src="/images/foto7.png"></a></div>
+					<div class="gallery__item"><a href="/images/foto8.jpg"><img src="/images/foto8.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto9.jpg"><img src="/images/foto9.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto10.jpg"><img src="/images/foto10.jpg"></a></div>
+					<div class="gallery__item"><a href="/images/foto11.jpg"><img src="/images/foto11.jpg"></a></div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="container">
+				<div class="footer-items">
+					<div class="footer__info">
+						<h4>Lorem ipsum</h4>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium neque eum officiis consectetur saepe consequatur repellendus impedit quidem, vero est, minus natus, nisi libero qui? Magni tenetur similique dolor nemo cum! Cum accusamus, non ipsam ab sit iste in aliquid maxime harum velit aspernatur fuga voluptate deleniti doloremque minus libero!
+					</div>
+					<div class="footer__contact">
+						<h4>Kontakt</h4>
+						<div>Akademia piłkarska Kmita Zabierzów</div>
+						<div><i class="fas fa-home"></i> <div>ul. Krakowska 12<br>12-123 Kraków</div></div>
+						<div><i class="fas fa-envelope"></i> mail@gmail.com</div>
+						<div><i class="fas fa-phone"></i> +48 123 321 123</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<script src="/js/jquery.min.js"></script>
+		<script src="/js/owl.carousel.min.js"></script>
+		<script src="/js/magnific-popup.min.js"></script>
+		<script src="/js/main.js"></script>
+	</body>
 </html>
